[package]
name = "edf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
embedded-graphics = "0.8.1"
hashbrown = "0.14.3"
libm = { version = "0.2.8", optional = true }
lru = "0.12.1"
markdown = { git = "https://github.com/pgavlin/markdown-rs", version = "1.0.0-alpha.16" }
no_std_io = { version = "0.6.0" }
serde = { version = "1.0.195", features = ["derive"] }
text_layout = "0.2.0"
toml = { version = "0.8.8", features = ["parse"] }
ttf-parser = "0.20.0"
unicode-segmentation = "1.10.1"
zeno = "0.3.0"

[features]
default = ["std"]
std = ["no_std_io/std"]
libm = ["dep:libm", "zeno/libm"]

[[bin]]
name = "edf"
test = false
doc = false
required-features = ["std"]
