[package]
name = "edf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"], optional = true }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { version = "0.6.0", optional = true }
hashbrown = { version = "0.14.3", optional = true }
libm = { version = "0.2.8", optional = true }
lru = { version = "0.12.1", optional = true }
markdown = { git = "https://github.com/pgavlin/markdown-rs", version = "1.0.0-alpha.16", optional = true }
no_std_io = { version = "0.6.0" }
serde = { version = "1.0.195", features = ["derive"], optional = true }
text_layout = { version = "0.2.0", optional = true }
toml = { version = "0.8.8", features = ["parse"], optional = true }
ttf-parser = { version = "0.20.0", optional = true, default-features = false }
unicode-segmentation = { version = "1.10.1", optional = true }
zeno = { git = "https://github.com/dfrg/zeno", version = "0.3.0", optional = true }

[features]
default = ["std", "layout", "display", "font_db"]
std = ["no_std_io/std", "ttf-parser?/std", "dep:clap", "dep:serde", "dep:toml", "dep:embedded-graphics-simulator"]
layout = ["dep:markdown", "dep:text_layout", "dep:unicode-segmentation"]
libm = ["dep:libm", "zeno/libm"]
font_db = ["dep:hashbrown", "dep:lru", "dep:ttf-parser", "dep:zeno"]
display = []

[[bin]]
name = "edf"
test = false
doc = false
required-features = ["std"]
