[package]
name = "edf"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"], optional = true }
ego-tree = { version = "0.6.2", optional = true }
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { version = "0.6.0", optional = true }
epub = { version = "2.1.1", optional = true }
hashbrown = { version = "0.14.3", optional = true }
hyphenation = { version = "0.8.4", optional = true, features = ["embed_all"] }
libm = { version = "0.2.8", optional = true }
lru = { version = "0.12.1", optional = true }
markdown = { git = "https://github.com/pgavlin/markdown-rs", version = "1.0.0-alpha.16", optional = true }
no_std_io = { version = "0.6.0" }
scraper = { version = "0.18.1", optional = true }
selectors = { git = "https://github.com/servo/servo.git", version = "0.24.0" }
serde = { version = "1.0.195", features = ["derive"], optional = true }
servo_arc = { git = "https://github.com/servo/servo.git", version = "0.2.0", optional = true }
servo_url = { git = "https://github.com/servo/servo.git", version = "0.0.1", optional = true }
style = { git = "https://github.com/servo/servo.git", version = "0.0.1", features = ["servo"], optional = true }
text_layout = { version = "0.3.0", optional = true }
toml = { version = "0.8.8", features = ["parse"], optional = true }
ttf-parser = { version = "0.20.0", optional = true, default-features = false }
unicode-segmentation = { version = "1.10.1", optional = true }
url = { version = "2.5.0", optional = true }
zeno = { git = "https://github.com/dfrg/zeno", version = "0.3.0", optional = true, default-features = false, features = ["eval"] }

[features]
default = ["std", "layout", "display", "font_db", "epub"]
std = ["no_std_io/std", "ttf-parser?/std", "zeno?/std", "dep:clap", "dep:hyphenation", "dep:serde", "dep:toml", "dep:embedded-graphics-simulator"]
layout = ["dep:markdown", "dep:text_layout", "dep:unicode-segmentation"]
libm = ["dep:libm", "zeno/libm"]
font_db = ["dep:hashbrown", "dep:lru", "dep:ttf-parser", "dep:zeno"]
display = []
epub = ["std", "dep:ego-tree", "dep:scraper", "dep:epub", "dep:url", "dep:servo_arc", "dep:servo_url", "dep:style"]

[[bin]]
name = "edf"
test = false
doc = false
required-features = ["std"]

[profile.release]
debug = true
